# accumulator

./: Cargo.toml  trading_rules.yml
src/: events.rs  main.rs
src/execution/: dry_run.rs  mod.rs  order_action.rs  order_manager.rs  order_report.rs  order_side_manager.rs  types.rs
src/inventory/: mod.rs
src/kraken/: kraken_client.rs  kraken_config.rs  kraken_executions.rs  kraken_inventory.rs  kraken_market.rs  kraken_venue.rs  mod.rs  utils.rs
src/market/: market_source.rs  market_state.rs  mod.rs
src/risk/: context.rs  decision.rs  engine.rs  mod.rs
src/risk/checks/: churn_throttle.rs  exposure_limit.rs  inventory_available.rs  kill_switch.rs  market_freshness.rs  market_sanity.rs  min_edge.rs  mod.rs
src/scenario/: mod.rs  scenario.rs  strategies.rs  venues.rs
src/scheduling/: mod.rs  quote_scheduler.rs  schedule_context.rs  schedule_policy.rs  types.rs
src/scheduling/policies/: in_flight_policy.rs  min_interval_policy.rs  mod.rs  top_of_book_tick_move_policy.rs  trading_hours_policy.rs
src/signals/: ema.rs  mod.rs  signal_state.rs
src/strategy/: instrument_context.rs  mod.rs  strategy.rs  strategy_helpers.rs
src/strategy/strategies/: mean_reversion.rs  mod.rs  regime_switch.rs  simple_mm.rs  trend_following.rs
src/types/: instrument.rs  inventory.rs  mod.rs  price.rs  quote.rs  quote_target.rs  trading_hours.rs  trading_rules.rs
