[package]
name = "accumulator"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
anyhow = "1"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2"
clap = { version = "4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
async-trait = "0.1.89"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_yaml = "0.9.34"
once_cell = "1.21.3"
